issues with img spacing and right columnn text

--- a/css/about.css
+++ b/css/about.css
@@ -91,6 +91,16 @@ header a {
     padding: 20px; 
 }
 
+h1 {
+    margin-top: 20px;
+    text-align: left;
+}
+
+h3 {
+    display: flex;
+    flex: nowrap;
+    margin-top: 10px;
+}
 hr {
     border: 1px dashed gray;
     width: 100%;
@@ -103,12 +113,12 @@ hr {
     margin-bottom: 15px;
 }
 
-
 button {
     color: black;
     margin: 5px;
     padding: 5px;
     font-size: 90%;
+    width: 100px;
 }
 
 .top {
@@ -116,25 +126,31 @@ button {
     flex-flow: column wrap;
     justify-content: space-evenly;
     width: 100%;
-    height: 600px;
+    height: 500px;
     border: 2px solid blue;
     text-align: left;
 }
 
 .text {
     display: flex;
-    flexwrap: wrap;
+    flex: wrap;
     width: 50%;
-    height: 200px;
-    margin: 10px;
-    padding: 10px;
+    height: 100px;
     border: 2px solid red;
+    text-align: left;
+    align-items: center;
 }
+/* 
+.text .how {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+} */
 
 .images {
     display: flex;
     flex: wrap;
-    width: 30%;
+    width: 50%;
     height: 300px;
     text-align: center;
     align-content: center;
@@ -145,7 +161,7 @@ button {
     flex-flow: column wrap;
     justify-content: space-evenly;
     width: 100%;
-    height: 600px;
+    height: 500px;
     border: 2px solid blue;
 }
 
